# RealTime-NFC-Reader

./: README.md
server/: nfcclient.html  nfcexplore.js  nfcio.js  nfcserver.js  package.json
source/: CMakeLists.txt  main.c  ndef.c  ndef.h  nfc.c  nfc.h  vital.c  vital.h
source/NxpRdLib_PublicRelease/comps/phKeyStore/src/: phKeyStore.c
source/NxpRdLib_PublicRelease/comps/phKeyStore/src/Sw/: phKeyStore_Sw.c
source/NxpRdLib_PublicRelease/comps/phbalReg/src/: phbalReg.c
source/NxpRdLib_PublicRelease/comps/phbalReg/src/RpiSpi/: phbalReg_RpiSpi.c  phbalReg_RpiSpi.h
source/NxpRdLib_PublicRelease/intfs/: phbalReg.h
source/NxpRdLib_PublicRelease/types/: ph_NxpBuild.h  ph_Status.h
